crates/carta/tests/snapshots/standalone_snapshots__beamer.snap
---
source: crates/carta/tests/standalone_snapshots.rs
expression: output
---
\documentclass[
  12pt,
]{beamer}
\usepackage{amsmath,amssymb}
\usepackage[T1]{fontenc}
\usepackage[utf8]{inputenc}
\usepackage{graphicx}
\providecommand{\tightlist}{%
  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
\hypersetup{
  pdftitle={A Grand ``Report''},
  pdfauthor={Ada Lovelace; Alan Turing},
  pdflang={en},
  pdfkeywords={analysis, computing},
  hidelinks,
  pdfcreator={carta}}
\title{A \emph{Grand} ``Report''\thanks{With thanks to the reviewers.}}
\subtitle{On Matters of Import}
\author{Ada Lovelace \and Alan Turing}
\date{2026-06-20}
\institute{The Analytical Society}
\begin{document}
\frame{\titlepage}
\begin{abstract}
A concise overview of the matters discussed herein.
\end{abstract}
\begin{frame}[fragile]{Introduction}
\protect\phantomsection\label{introduction}
The opening remarks, with \emph{emphasis} and a
\href{https://example.com}{link}.

\begin{verbatim}
fn main() {}
\end{verbatim}
\end{frame}
\end{document}
