crates/carta/tests/snapshots/standalone_snapshots__gfm.snap
---
source: crates/carta/tests/standalone_snapshots.rs
expression: output
---
---
abstract: |
  A concise overview of the matters discussed herein.
author:
- Ada Lovelace
- Alan Turing
date: 2026-06-20
description: A short standalone document.
dir: ltr
fontsize: 12pt
institute: The Analytical Society
keywords:
- analysis
- computing
lang: en
subtitle: On Matters of Import
thanks: With thanks to the reviewers.
title: A *Grand* “Report”
---

# Introduction

The opening remarks, with *emphasis* and a [link](https://example.com).

``` rust
fn main() {}
```
