crates/carta/tests/snapshots/standalone_snapshots__man.snap
---
source: crates/carta/tests/standalone_snapshots.rs
expression: output
---
.\" Automatically generated by carta
.TH "A \f[I]Grand\f[R] Report" "" "2026\-06\-20" ""
.SH Introduction
The opening remarks, with \f[I]emphasis\f[R] and a \c
.UR https://example.com
link
.UE \c
\&.
.IP
.EX
fn main() {}
.EE
.SH AUTHORS
Ada Lovelace; Alan Turing
